Fixed Experience Text visibility on smaller screens

--- a/src/app/Experience/experience.module.css
+++ b/src/app/Experience/experience.module.css
@@ -319,7 +319,7 @@
 
     .textContainerTag {
         max-width: 47vw;
-
+        font-size: 14px;
     }
 
     
